version 1.6.1, in progress
- Revamp for internal "genr" mechanism plus some user-visible
  changes to genr (manual not yet updated)
- Make the "delete" command do what the manual says
- Doing "Edit attributes" on a newly generated variable: you
  can edit the formula and hence change the content of the variable
- Displaying table of summary statistics for multiple variables:
  allow slightly longer variable names before falling back from
  combined tabular format to individual tables
- Sorting variables in main window: always revert to sort by ID
  number after making changes (e.g. loading a new dataset)
- Main-window variable listing: don't always jump to line 1 after
  making changes
- When you "Save as" in the Command log window, ensure that all the 
  regular script-editing signals are properly connected (e.g. the 
  state of the Save icon responds appropriately)
- "dummify" command: add options --drop-first and --drop-last

9/13/2006 version 1.6.0
- Revamp mechanism for saving sessions in gui program (we
  now save sessions as zipfiles containing XML representations
  of any models that have been estimated)
- Add "native" exact ML estimation of ARMA models using the
  Kalman filter
- Saving data in native gretl format: make gzip compression the
  default
- Add some basic functionality for analysis of discrete variables. 
  New behavior of frequency distribution, plus new commands: 
  "discrete" (interpret variables as discrete), "dummify" (create a 
  set of dummies coding for the values of a discrete variable), and 
  "xtab" (cross-tabulation of two discrete variables)
- Don't add an extra newline at the end of plain text data files
  (e.g. CSV)
- "restrict" command for single equations: add a printout of the
   restricted coefficient estimates and standard errors
- Add mechanism for packaging user-defined functions so as to
  make these available for other users; also add a mechanism
  for downloading such packages from a server, and for uploading