@@ -2992,97 +2992,6 @@ int gretl_matrix_QR_decomp_with_pivot (gretl_matrix *M, gretl_matrix *R)
 
 #endif 
 
-#if 0
-
-int gretl_matrix_LQ_decomp (gretl_matrix *M, gretl_matrix *L)
-{
-    integer m = M->rows;
-    integer n = M->cols;
-    integer lda = m;
-
-    integer info = 0;
-    integer lwork = -1;
-    doublereal *tau = NULL;
-    doublereal *work = NULL;
-    doublereal *work2;
-
-    int i, j;
-    int err = 0;
-
-    if (L != NULL && (L->rows != m || L->cols != m)) {
-	return E_NONCONF;
-    }
-
-    /* dim of tau is min (m, n) */
-    tau = malloc(m * sizeof *tau);
-    work = lapack_malloc(sizeof *work);
-
-    if (tau == NULL || work == NULL) {
-	err = E_ALLOC;
-	goto bailout;
-    }
-
-    /* workspace size query */
-    dgeqlf_(&m, &n, M->val, &lda, tau, work, &lwork, &info);
-    if (info != 0) {
-	fprintf(stderr, "dgeqlf: info = %d\n", (int) info);
-	err = 1;
-	goto bailout;
-    }
-
-    /* optimally sized work array */
-    lwork = (integer) work[0];
-    work2 = lapack_realloc(work, (size_t) lwork * sizeof *work);
-    if (work2 == NULL) {
-	err = E_ALLOC;
-	goto bailout;
-    }
-
-    work = work2;
-
-    /* run actual LQ factorization */
-    dgeqlf_(&m, &n, M->val, &lda, tau, work, &lwork, &info);
-    if (info != 0) {
-	fprintf(stderr, "dgeqlf: info = %d\n", (int) info);
-	err = 1;
-	goto bailout;
-    }
-
-    if (R != NULL) {
-	/* copy the lower triangular L out of M */
-	for (i=0; i<m; i++) {
-	    for (j=0; j<m; j++) {
-		if (i >= j) {
-		    gretl_matrix_set(L, i, j, 
-				     gretl_matrix_get(M, i, j));
-		} else {
-		    gretl_matrix_set(L, i, j, 0.0);
-		}
-	    }
-	}
-    }
-
-    gretl_matrix_print(L, "L");
-    fprintf(stderr, "m=%d, n=%d\n", (int) m, (int) n);
-
-    /* obtain the real "Q" matrix (in M) */
-    dorgql_(&m, &n, &n, M->val, &lda, tau, work, &lwork, &info);
-    if (info != 0) {
-	fprintf(stderr, "dorgql: info = %d\n", (int) info);
-	err = 1;
-	goto bailout;
-    } 
-
- bailout:
-
-    free(tau);
-    lapack_free(work);
-
-    return err;
-}
-
-#endif
-
 /**
  * gretl_matrix_QR_decomp:
  * @M: m x n matrix to be decomposed.
