@@ -1,6 +1,6 @@
 version 1.6.1, in progress
 - Revamp for internal "genr" mechanism plus some user-visible
-  changes to genr (manual not yet updated)
+  changes to genr (manual not fully updated)
 - Make the "delete" command do what the manual says
 - Doing "Edit attributes" on a newly generated variable: you
   can edit the formula and hence change the content of the variable
@@ -15,6 +15,15 @@ version 1.6.1, in progress
   regular script-editing signals are properly connected (e.g. the 
   state of the Save icon responds appropriately)
 - "dummify" command: add options --drop-first and --drop-last
+- Add ordered probit analysis for the case where the dependent
+  variable is discrete but not binary
+- Fix some bugs and inconsistencies in relation to the Ljung-Box
+  statistic and ACFs
+- Add the CUSUMSQ test alongside CUSUM
+- Add test version of Arellano-Bond dynamic panel data estimation
+- Fix bug in GUI spreadsheet in relation to adding variables
+- Fix bug in restricting the sample in the GUI, for the case
+  where's there's already a restriction in place
 
 9/13/2006 version 1.6.0
 - Revamp mechanism for saving sessions in gui program (we
